[Add] Auto-save on training-bit
Plus add <h1>, <h2>, <ul>, <ol> to the editor

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -32,6 +32,12 @@
   </div>
   {% endif %}
 
+  <div id="permanent-messages">
+    {% block permanent-messages %}
+    {% endblock %}
+  </div>
+
+
   {# Unfortunately we need this wrapper to position the footer at the bottom of the page #}
   <div id="sticky-footer-wrap">
     <header class="top-bar {% block header-classes %}{% endblock %}">
