--- a/scss/messages.scss
+++ b/scss/messages.scss
@@ -45,3 +45,15 @@
 
   }
 }
+#permanent-messages {
+  position: fixed;
+  top: rem-calc(20px);
+  left: rem-calc(30px);
+  z-index: 3;
+
+  .status {
+    margin-left: rem-calc(5px);
+    text-transform: none;
+    font-size: rem-calc(12px);
+  }
+}
