--- a/scss/trainingbit_edit_content.scss
+++ b/scss/trainingbit_edit_content.scss
@@ -1,4 +1,17 @@
+#connection-status {
+  display: none;
+}
+#save-button {
+  .status {
+    text-transform: none;
+    font-size: rem-calc(10px);
+  }
+  }
+}
 
+#trainingbit_content_json {
+  display: hidden;
+}
 
 .trainingbit-content-editor {
   margin-bottom: 3rem;
@@ -74,7 +87,7 @@
   }
   .delete {
     position: absolute;
-    right: -4rem;
+    right: -1rem;
     margin: auto;
 
     a       .icon {
