[Add] `debug_styles` page and correctly load Foundation 5 SCSS
This includes a bunch of fixes now that the Foundation 5 `$h1-font-size`
and other settings actually work.

The fix is to switch the order of
`@import foundation`
`@import _settings`
in scss/app.scss

--- a/global_change_lab/templates/partials/trainer_item.html
+++ b/global_change_lab/templates/partials/trainer_item.html
@@ -1,6 +1,6 @@
 
 <div class="trainer-item">
-    <h3><a href="{% url url_name item.id %}">{{item.name}}</a></h3>
+    <h6 class="item-title"><a href="{% url url_name item.id %}">{{item.name}}</a></h6>
     <ul class="icon-list">
       {# "item" is pretty unspecific, see #}
       {# http://stackoverflow.com/questions/6571649/model-name-of-objects-in-django-templates #}
