--- a/scss/front_page.scss
+++ b/scss/front_page.scss
@@ -8,10 +8,12 @@ div#front-page-greeter {
 
   h1, h2, p {
     color: white;
+    margin: 0;
   }
   h1 {
     background-color: $gcl-red;
     font-size: rem-calc(37);
+    @extend %text-white-on-red;
   }
   h2 {
     @extend %h1;
