--- a/scss/trainer_dashboard.scss
+++ b/scss/trainer_dashboard.scss
@@ -7,11 +7,12 @@
   }
   h3 {
     text-transform: none;
+    display: inline-block;
   }
   a.stats-link {
     font-size: 0.7rem;
     // text-align: right;
-    line-height: $h3-font-size;
+    line-height: 2 * $h3-font-size;
     float: right;
     // display: inline-block;
   }
@@ -29,8 +30,9 @@
   }
 
   div.trainer-item {
-    h3 a {
-      @extend %white-on-darkgray;
+    .item-title a {
+      @extend %text-white-on-darkgray;
+      text-transform: none;
     }
     padding-bottom: rem-calc(10px);
     padding-top: rem-calc(10px);
