[Cleanup] Move generated .min.js-files to /js folder
+ Remove old unused etch.js stuff
+ Update .gitignore to match the new destination for the .min.js-files

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -11,7 +11,7 @@
   {% endif %}
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="{% static 'global_change_lab/user.min.js' %}"></script>
+  <script src="{% static 'global_change_lab/js/user.min.js' %}"></script>
 
   {% block scripts %}
   {% endblock %}
