--- a/scss/app.scss
+++ b/scss/app.scss
@@ -16,6 +16,7 @@
 @import "scss/comments";
 @import "scss/skills";
 @import "scss/skill_edit";
+@import "scss/profile";
 @import "scss/user_progress";
 
 
