--- a/scss/app.scss
+++ b/scss/app.scss
@@ -8,6 +8,7 @@
 @import "scss/messages";
 @import "scss/trainer_dashboard";
 @import "scss/statistics";
+@import "scss/trainingbit_cover";
 @import "scss/trainingbit_view";
 @import "scss/trainingbit_grid";
 @import "scss/trainingbit_edit";
