[Update] Improve skill_list_small
+ Move the `.skill_list_small` class from profile.scss to skills.scss

--- a/global_change_lab/templates/partials/project_list.html
+++ b/global_change_lab/templates/partials/project_list.html
@@ -1,5 +1,6 @@
 
 <div id="project-list">
+{% if projects %}
 {% for project in projects %}
   <div class="project" id="project-{{ project.id }}">
     {% if not hide_links %}<a href="{{ project.get_absolute_url }}">{% endif %}
@@ -15,4 +16,7 @@
     {% endif %}
   </div>
 {% endfor %}
+{% else %}
+  <div class="message-missing">No projects yet</div>
+{% endif %}
 </div>
