--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -27,6 +27,9 @@ body.skill-view {
 
 }
 
+/***************/
+/* SKILL LISTS */
+/***************/
 .skill-list-view {
   $skill-height: rem-calc(160px);
 
@@ -88,5 +91,50 @@ body.skill-view {
       font-size: 0.7rem;
       color: #9E9E9E;
     }
+  }
+}
+
+.skill-list-small {
+
+  $row-height: 4rem;
+
+  .row {
+    margin-bottom: rem-calc(5px);
+  }
+
+  .image-column:before {    /* create a full-height inline block pseudo=element */
+    content: ' ';
+    display: inline-block;
+    vertical-align: middle;  /* vertical alignment of the inline element */
+    height: 100%;
+  }
+
+  .image-column {
+    @include grid-column(2);
+    text-align: center;
+    height: $row-height;
+    // line-height: $row-height;
+    vertical-align: middle;
+    font: 0/0 a;         /* remove the gap between inline(-block) elements */
+
+
+    img {
+      max-height: $row-height;
+      display: inline-block;
+    }
+  }
+  .name-column {
+    @include grid-column(10);
+    height: $row-height;
+
+    .skill-name {
+      line-height: $row-height - 0.5rem;
+      margin: 0;
+    }
+  }
+
+  .count {
+    text-align: center;
+    font-size: 0.75rem;
   }
 }
