[Add] Suggestions (for other TBs) on completing a training bit

--- a/global_change_lab/templates/partials/trainingbits_grid.html
+++ b/global_change_lab/templates/partials/trainingbits_grid.html
@@ -1,8 +1,8 @@
 {# <ul class="trainingbit-list-view small-block-grid-1 medium-block-grid-3 large-block-grid-4"> #}
-<ul class="trainingbit-list-view">
+<ul class="trainingbit-list-view {{ extra_classes }}">
 {% for trainingbit in trainingbits %}
   <li class="trainingbit">
-    <a href="{{ trainingbit.get_absolute_url }}">
+    <a href="{{ trainingbit.get_absolute_url }}{{ get_query }}">
     <div class="wrapper">
       <div class="image" style="background-image: url({{ trainingbit.getImage }})">
         <div class="label">{{ trainingbit.get_label_display }}</div>
@@ -12,6 +12,7 @@
       <h6> {{trainingbit.name}} </h6>
       <p>{{trainingbit.description}}</p>
       <div class="info">
+        {% if not hide_part_of %}
         <span class="metadata">
         {% if trainingbit.skill_set.all %}
         This Training Bit is part of the skills
@@ -20,6 +21,7 @@
         {% endfor %}
         {% endif %}
         </span>
+        {% endif %}
         <hr>
         <span class="icon small heart red"></span> 23
         <span class="icon small chat red"></span> 9
