--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -65,9 +65,26 @@
       <input name="title" placeholder="Title" class="title">
       <textarea name="content" placeholder="Write your thoughts about this training bit"></textarea>
       <input type="file" name="image">
-      <button>Share</button>
+      <button class="share-button">Share, and complete training bit</button>
     </form>
   </div>
+</div>
+
+<div id="trainingbit-completed-modal" class="reveal-modal medium" data-reveal>
+  <h3>Awesome, you have completed</h3> <h2 class="trainingbit-title">{{ trainingbit.name }}</h2><h3>!</h3>
+  <p>Checkout these other training bits that may be of interest</p>
+  {% if suggested_trainingbits %}
+    <div style="width: 30rem; margin-left: auto; margin-right: auto;">
+    {% include 'partials/trainingbits_grid.html' with trainingbits=suggested_trainingbits hide_part_of=True extra_classes='medium' %}
+    </div>
+  {% else %}
+    <p>Sorry! We have no suggestions for you at the moment.
+    Maybe you have already completed all Training Bits?</p>
+  {% endif %}
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+
+<div id="trainingbit-failed-submit-modal" class="reveal-modal tiny" data-reveal>
 </div>
 
 <hr>
@@ -238,6 +255,34 @@ $(document).ready(function() {
   });
   tb_share_view.render();
 
+});
+
+
+$(document).ready(function() {
+  $('#project-form').submit(function(e) {
+    e.preventDefault();
+    $(this).ajaxSubmit({
+      error: function(response) {
+        var j = JSON.parse(response.responseText);
+        console.log(j);
+        var $modal = $('#trainingbit-failed-submit-modal');
+        $modal.html('');
+        $modal.append('<h3>Failed to add project</h3>');
+        for (name in j) {
+          {# $('#project-form input[name='+name+']').after($('<span>'+j[name]+'</span>')); #}
+          {# $('#project-form textarea[name='+name+']').after($('<span>'+j[name]+'</span>')); #}
+          var $li = $('<li />').html('<strong>' + name + '</strong>:' + j[name]);
+          $modal.append($li);
+        }
+        $modal.foundation('reveal', 'open');
+      },
+      success: function() {
+        $('#trainingbit-completed-modal').foundation('reveal', 'open');
+        $('#project-form').resetForm();
+        {# $('#project-form').clearForm(); #}
+      },
+    });
+  });
 });
 
 </script>
