--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -5,6 +5,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  {# For showing not-full-pages to iPhones  #}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="http://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet" type="text/css">
   {% if debug %}
   <script src="//localhost:35729/livereload.js"></script>
