[Cleanup] Structure global_change_lab/urls.py
+ Rename 'user/dashboard' to 'trainer/dashboard' (makes more sense)
+ Remove "shares" URL for now (affects front_page.html)
+ Remove unused comments

--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -90,7 +90,7 @@
     <h3>Share with others</h3>
     <div class="icon large chat"></div>
     <p>Share what you do and learn from other activists</p>
-    <a href="{% url 'shares' %}" class="button join">See all shares</a>
+    <a href="{#{% url 'shares' %}#}" class="button join">See all shares</a>
   </div>
 </div>
 
