[Fix|Add] Add carousel to new_user and fix redirect on signup
The redirect on signup should go to the welcome page

--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -39,7 +39,7 @@
           <label><div>Name</div>           <input type="text" name="username"></label>
           <label><div>Password</div>       <input type="password" name="password1"></label>
           <label><div>Repeat password</div><input type="password" name="password2"></label>
-          <input type="hidden" name="next" value="{% url 'profile' %}">
+          <input type="hidden" name="next" value="{% url 'new_user' %}">
       </div>
       <div class="small-5 columns signup">
         <label>
